<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <ImageView
        android:id="@+id/profileContainer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="4dp"
        android:background="@drawable/background_profile_outline"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/profileContainer"
        tools:text="JAMES SMITH" />

    <TextView
        android:id="@+id/emailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:letterSpacing="0.1"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/nameValue"
        tools:text="james.smith@mail.gg" />

    <xml.one.pass.view.ItemAction
        android:id="@+id/updateProfileAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        app:ActionIcon="@drawable/ic_symbol_write"
        app:ActionTitle="@string/update_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailValue" />

    <xml.one.pass.view.ItemAction
        android:id="@+id/masterPasswordAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:ActionIcon="@drawable/ic_symbol_lock"
        app:ActionTitle="@string/change_master_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateProfileAction" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/contentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="profileContainer, nameValue, emailValue, updateProfileAction, masterPasswordAction" />

    <ImageView
        android:id="@+id/emptyLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/ic_search_empty"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/masterPasswordAction"
        android:contentDescription="@string/no_results" />

    <TextView
        android:id="@+id/emptyLogoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/no_profile"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/emptyLogo"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <TextView
        android:id="@+id/emptyLogoSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/no_profile_message"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/emptyLogoTitle"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emptyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="emptyLogo, emptyLogoTitle, emptyLogoSubTitle" />

    <ImageView
        android:id="@+id/profileDivider"
        android:layout_width="30dp"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/emptyLogoSubTitle"
        app:srcCompat="@drawable/ic_home_indicator"
        android:contentDescription="@string/indicator" />

    <xml.one.pass.view.ItemAction
        android:id="@+id/logoutAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:ActionIcon="@drawable/ic_symbol_logout"
        app:ActionTitle="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileDivider" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
