<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:id="@+id/welcomeParent">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/one_pass_logo" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_two_title"
        android:textSize="48sp"
        android:textStyle="bold"
        android:lines="3"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/welcomeMessage"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/welcome_two_description"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        android:lines="5"
        app:layout_constraintBottom_toTopOf="@+id/welcomePageCounter"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <TextView
        android:id="@+id/welcomePageCounter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.5"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="72dp"
        app:layout_constraintBottom_toTopOf="@+id/registerAction"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"
        tools:text="123" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerAction"
        style="@style/OutlinesButtonAppearance"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loginAction"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginAction"
        style="@style/ColoredButtonAppearance"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/registerAction" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
